...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.favorite.view.FavoriteTvShowsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_favorite_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="@dimen/dp_16"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
...
        app:layout_constraintTop_toBottomOf="@+id/image_view_tv_empty_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_tv_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="image_view_tv_empty_state, text_view_tv_empty_state"
        tools:visibility="visible" />

...
